--- a/index.html
+++ b/index.html
@@ -5,20 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Piano Sight-Reading Trainer</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="https://unpkg.com/vexflow/releases/vexflow.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script type="importmap">
-      {
-        "imports": {
-          "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
-          "react": "https://aistudiocdn.com/react@^19.2.0",
-          "react/": "https://aistudiocdn.com/react@^19.2.0/"
-        }
-      }
-    </script>
+{
+  "imports": {
+    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
+    "react": "https://aistudiocdn.com/react@^19.2.0",
+    "react/": "https://aistudiocdn.com/react@^19.2.0/",
+    "vexflow": "https://aistudiocdn.com/vexflow@^5.0.0"
+  }
+}
+</script>
   </head>
   <body class="bg-gray-100 text-gray-800">
     <div id="root"></div>
+    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/vexflow/4.2.0/vexflow.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script type="module" src="/index.tsx"></script>
   </body>
 </html>
